--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "http-proxy-middleware": "^3.0.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.377.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
