--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
+    "sweetalert": "^2.1.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "xlsx": "^0.18.5"
